https links in books page

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -17,8 +17,8 @@ _Listed in order of descending release date of newest edition._
 by Joseph Fahey, Thomas Haratyk, Scott McCaughie, Yehonathan Sharvit, Konrad Szydlo +
 Jan 29, 2020
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51UNlhb3nmL._SL160.jpg[Hands-On Reactive Programming with Clojure,link="http://amzn.com/B07N7525GX",width="130"]
-| http://amzn.com/B07N7525GX[Reactive Programming with Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51UNlhb3nmL._SL160.jpg[Hands-On Reactive Programming with Clojure,link="https://amzn.com/B07N7525GX",width="130"]
+| https://amzn.com/B07N7525GX[Reactive Programming with Clojure] +
 by Konrad Szydlo, Leonardo Borges +
 Jan 25, 2019
 
@@ -42,8 +42,8 @@ Aug 31, 2018
 by Russ Olsen +
 May 19, 2018
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="http://a.co/bSxW6A6",width="130"]
-| http://a.co/bSxW6A6[Programming Clojure 3rd edition] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51Bvd25CstL._SL160.jpg[Programming Clojure 3rd edition,link="https://a.co/bSxW6A6",width="130"]
+| https://a.co/bSxW6A6[Programming Clojure 3rd edition] +
 by Alex Miller, Stuart Halloway, Aaron Bedra +
 Feb 21, 2018
 
@@ -52,13 +52,13 @@ Feb 21, 2018
 by Anuj Kumar +
 Jan 25, 2018
 
-| image::https://images-na.ssl-images-amazon.com/images/I/41k50H6VpaL._SL160.jpg[ClojureScript Unraveled,link="http://a.co/cDfN4n4",width="130"]
-| http://a.co/cDfN4n4[Quick Clojure: Effective Functional Programming] +
+| image::https://images-na.ssl-images-amazon.com/images/I/41k50H6VpaL._SL160.jpg[ClojureScript Unraveled,link="https://a.co/cDfN4n4",width="130"]
+| https://a.co/cDfN4n4[Quick Clojure: Effective Functional Programming] +
 by Mark McDonnell +
 Aug 23, 2017
 
-| image::https://images-na.ssl-images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="http://a.co/c2gI4l2",width="130"]
-| http://a.co/c2gI4l2[Web Development with Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="https://a.co/c2gI4l2",width="130"]
+| https://a.co/c2gI4l2[Web Development with Clojure] +
 by Dmitri Sotnikov +
 Aug 23, 2016
 
@@ -67,138 +67,138 @@ Aug 23, 2016
 by Andrey Antukh, Alejandro Gómez +
 Jul 25, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51EwRiXh4ZL._SL160.jpg[Learning ClojureScript, link="http://a.co/2X3MJn2",width="130"]
-| http://a.co/2X3MJn2[Learning ClojureScript] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51EwRiXh4ZL._SL160.jpg[Learning ClojureScript, link="https://a.co/2X3MJn2",width="130"]
+| https://a.co/2X3MJn2[Learning ClojureScript] +
 by W. David Jarvis, Rafik Naccache, Allen Rohner +
 Jun 30, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51iq-PKIZ8L._SL160.jpg[Professional Clojure, link="http://a.co/bSHZ7X3",width="130"]
-| http://a.co/bSHZ7X3[Professional Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51iq-PKIZ8L._SL160.jpg[Professional Clojure, link="https://a.co/bSHZ7X3",width="130"]
+| https://a.co/bSHZ7X3[Professional Clojure] +
 by Jeremy Anderson, Michael Gaare, Justin Holguín, Nick Bailey, and Timothy Pratley +
 Jun 7, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/61TJZjnjO0L._SL160.jpg[Mastering Clojure, link="http://a.co/bTLhJ2d",width="130"]
-| http://a.co/bTLhJ2d[Mastering Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/61TJZjnjO0L._SL160.jpg[Mastering Clojure, link="https://a.co/bTLhJ2d",width="130"]
+| https://a.co/bTLhJ2d[Mastering Clojure] +
 by Akhil Wali +
 Mar 28, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/61p47dd81cL._SL160.jpg[Clojure for Java Developers, link="http://a.co/029aVrm",width="130"]
-| http://a.co/029aVrm[Clojure for Java Developers] +
+| image::https://images-na.ssl-images-amazon.com/images/I/61p47dd81cL._SL160.jpg[Clojure for Java Developers, link="https://a.co/029aVrm",width="130"]
+| https://a.co/029aVrm[Clojure for Java Developers] +
 by Eduardo Diaz +
 Feb 23, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51ofF2ckdkL._SL160.jpg[Clojure for Finance, link="http://a.co/fbHnhEM",width="130"]
-| http://a.co/fbHnhEM[Clojure for Finance] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51ofF2ckdkL._SL160.jpg[Clojure for Finance, link="https://a.co/fbHnhEM",width="130"]
+| https://a.co/fbHnhEM[Clojure for Finance] +
 by Timothy Washington +
 Jan 11, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51QWOEjmtIL._SL160.jpg[Clojure In Action, link="http://a.co/a4hDbTn",width="130"]
-| http://a.co/a4hDbTn[Clojure In Action] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51QWOEjmtIL._SL160.jpg[Clojure In Action, link="https://a.co/a4hDbTn",width="130"]
+| https://a.co/a4hDbTn[Clojure In Action] +
 by Amit Rathore +
 Jan 1, 2016
 
-| image::https://images-na.ssl-images-amazon.com/images/I/6112vbQYDLL._SL160.jpg[Clojure for the Brave and True,link="http://a.co/bsviqV7",width="130"]
-| http://a.co/bsviqV7[Clojure for the Brave and True] +
+| image::https://images-na.ssl-images-amazon.com/images/I/6112vbQYDLL._SL160.jpg[Clojure for the Brave and True,link="https://a.co/bsviqV7",width="130"]
+| https://a.co/bsviqV7[Clojure for the Brave and True] +
 by Daniel Higginbotham +
 Oct 23, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51aMgNS%2BK7L._SL160.jpg[Clojure Recipes,link="http://a.co/clSHVQi",width="130"]
-| http://a.co/clSHVQi[Clojure Recipes] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51aMgNS%2BK7L._SL160.jpg[Clojure Recipes,link="https://a.co/clSHVQi",width="130"]
+| https://a.co/clSHVQi[Clojure Recipes] +
 by Julian Gamble +
 Oct 23, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/41iH5aTHB3L._SL160.jpg[Clojure Applied,link="http://a.co/1HL2XPF",width="130"]
-| http://a.co/1HL2XPF[Clojure Applied: From Practice to Practitioner] +
+| image::https://images-na.ssl-images-amazon.com/images/I/41iH5aTHB3L._SL160.jpg[Clojure Applied,link="https://a.co/1HL2XPF",width="130"]
+| https://a.co/1HL2XPF[Clojure Applied: From Practice to Practitioner] +
 by Ben Vandgrift, Alex Miller +
 Sept 6, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51ki-47i6bL._SL160.jpg[Clojure for Data Science,link="http://a.co/idtKjhS",width="130"]
-| http://a.co/idtKjhS[Clojure for Data Science] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51ki-47i6bL._SL160.jpg[Clojure for Data Science,link="https://a.co/idtKjhS",width="130"]
+| https://a.co/idtKjhS[Clojure for Data Science] +
 by Henry Garner +
 Sept 3, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51Nym1wJXVL._SL160.jpg[Clojure High Performance Programming,link="http://a.co/7adcmsl",width="130"]
-| http://a.co/7adcmsl[Clojure High Performance Programming] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51Nym1wJXVL._SL160.jpg[Clojure High Performance Programming,link="https://a.co/7adcmsl",width="130"]
+| https://a.co/7adcmsl[Clojure High Performance Programming] +
 by Shantanu Kumar +
 Sept 1, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/515vh5czqnL._SL160.jpg[Clojure Data Structures and Algorithms,link="http://a.co/g7JAFAS",width="130"]
-| http://a.co/g7JAFAS[Clojure Data Structures and Algorithms] +
+| image::https://images-na.ssl-images-amazon.com/images/I/515vh5czqnL._SL160.jpg[Clojure Data Structures and Algorithms,link="https://a.co/g7JAFAS",width="130"]
+| https://a.co/g7JAFAS[Clojure Data Structures and Algorithms] +
 by Rafik Naccache +
 Aug 19, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/5122uV93jfL._SL160.jpg[Living Clojure,link="http://a.co/1m2Zt4p",width="130"]
-| http://a.co/1m2Zt4p[Living Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/5122uV93jfL._SL160.jpg[Living Clojure,link="https://a.co/1m2Zt4p",width="130"]
+| https://a.co/1m2Zt4p[Living Clojure] +
 by Carin Meier +
 Apr 30, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51l1oGz9N7L._SL160.jpg[Clojure Reactive Programming,link="http://a.co/fhyaFka",width="130"]
-| http://a.co/fhyaFka[Clojure Reactive Programming] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51l1oGz9N7L._SL160.jpg[Clojure Reactive Programming,link="https://a.co/fhyaFka",width="130"]
+| https://a.co/fhyaFka[Clojure Reactive Programming] +
 by Leonardo Borges +
 Mar 24, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51XnilmUaIL._SL160.jpg[Clojure Web Development Essentials,link="http://a.co/2FlRxd5",width="130"]
-| http://a.co/2FlRxd5[Clojure Web Development Essentials] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51XnilmUaIL._SL160.jpg[Clojure Web Development Essentials,link="https://a.co/2FlRxd5",width="130"]
+| https://a.co/2FlRxd5[Clojure Web Development Essentials] +
 by Ryan Baldwin +
 Feb 16, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51-B3kElSiL._SL160.jpg[Clojure Data Analysis Cookbook, link="http://a.co/gIwPEkt",width="130"]
-| http://a.co/gIwPEkt[Clojure Data Analysis Cookbook] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51-B3kElSiL._SL160.jpg[Clojure Data Analysis Cookbook, link="https://a.co/gIwPEkt",width="130"]
+| https://a.co/gIwPEkt[Clojure Data Analysis Cookbook] +
 by Eric Rochester +
 Jan 22, 2015
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51nhUEYSLhL._SL160.jpg[Mastering Clojure Macros,link="http://a.co/4VjjiQJ",width="130"]
-| http://a.co/4VjjiQJ[Mastering Clojure Macros] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51nhUEYSLhL._SL160.jpg[Mastering Clojure Macros,link="https://a.co/4VjjiQJ",width="130"]
+| https://a.co/4VjjiQJ[Mastering Clojure Macros] +
 by Colin Jones +
 Sept 5, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/518RxlXpXsL._SL160.jpg[The Joy of Clojure,link="http://a.co/evdNcOs",width="130"]
-| http://a.co/evdNcOs[The Joy of Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/518RxlXpXsL._SL160.jpg[The Joy of Clojure,link="https://a.co/evdNcOs",width="130"]
+| https://a.co/evdNcOs[The Joy of Clojure] +
 by Michael Fogus, Chris Houser +
 Jun 13, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51gyxyvmX3L._SL160.jpg[Mastering Clojure Data Analysis,link="http://a.co/bYwhMwH",width="130"]
-| http://a.co/bYwhMwH[Mastering Clojure Data Analysis] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51gyxyvmX3L._SL160.jpg[Mastering Clojure Data Analysis,link="https://a.co/bYwhMwH",width="130"]
+| https://a.co/bYwhMwH[Mastering Clojure Data Analysis] +
 by Eric Rochester +
 May 26, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51Af%2B5qKOeL._SL160.jpg[Clojure for Machine Learning,link="http://a.co/7PRmDOK",width="130"]
-| http://a.co/7PRmDOK[Clojure for Machine Learning] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51Af%2B5qKOeL._SL160.jpg[Clojure for Machine Learning,link="https://a.co/7PRmDOK",width="130"]
+| https://a.co/7PRmDOK[Clojure for Machine Learning] +
 by Akhil Wali +
 Apr 24, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51NPZu-5PiL._SL160.jpg[Clojure Cookbook, link="http://a.co/1K6SZSI",width="130"]
-| http://a.co/1K6SZSI[Clojure Cookbook] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51NPZu-5PiL._SL160.jpg[Clojure Cookbook, link="https://a.co/1K6SZSI",width="130"]
+| https://a.co/1K6SZSI[Clojure Cookbook] +
 by Luke VanderHart and Ryan Neufeld +
 Mar 24, 2014
 
-| image::https://images-na.ssl-images-amazon.com/images/I/515hwMhZELL._SL160.jpg[Clojure for Domain-specific Languages,link="http://a.co/3rwXJkx",width="130"]
-| http://a.co/3rwXJkx[Clojure for Domain-specific Languages] +
+| image::https://images-na.ssl-images-amazon.com/images/I/515hwMhZELL._SL160.jpg[Clojure for Domain-specific Languages,link="https://a.co/3rwXJkx",width="130"]
+| https://a.co/3rwXJkx[Clojure for Domain-specific Languages] +
 by Ryan Kelker +
 Dec 18, 2013
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51i1Cn-IqdL._SL160.jpg[Functional Programming Patterns in Scala and Clojure,link="http://a.co/2J3jvLX",width="130"]
-| http://a.co/2J3jvLX[Functional Programming Patterns in Scala and Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51i1Cn-IqdL._SL160.jpg[Functional Programming Patterns in Scala and Clojure,link="https://a.co/2J3jvLX",width="130"]
+| https://a.co/2J3jvLX[Functional Programming Patterns in Scala and Clojure] +
 by Michael Bevilacqua-Linn +
 Nov 2, 2013
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51KgF%2B-38WL._SL160.jpg[ClojureScript: Up and Running,link="http://a.co/74IUDUu",width="130"]
-| http://a.co/74IUDUu[ClojureScript: Up and Running] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51KgF%2B-38WL._SL160.jpg[ClojureScript: Up and Running,link="https://a.co/74IUDUu",width="130"]
+| https://a.co/74IUDUu[ClojureScript: Up and Running] +
 by Stuart Sierra, Luke VanderHart +
 Nov 10, 2012
 
-| image::https://images-na.ssl-images-amazon.com/images/I/41sY2b6MKiL._SL160.jpg[Clojure Programming,link="http://a.co/jiaX8tX",width="130"]
-| http://a.co/jiaX8tX[Clojure Programming] +
+| image::https://images-na.ssl-images-amazon.com/images/I/41sY2b6MKiL._SL160.jpg[Clojure Programming,link="https://a.co/jiaX8tX",width="130"]
+| https://a.co/jiaX8tX[Clojure Programming] +
 by Chas Emerick, Brian Carper, Christophe Grand +
 Apr 22, 2012
 
-| image::http://clojure-buch.de/cover.jpg[Clojure,link="http://clojure-buch.de/",width=130]
-| http://clojure-buch.de/[Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/41h18ZPRfTL._SL160.jpg[Clojure,link="https://www.amazon.de/dp/389864684X",width=130]
+| https://www.amazon.de/dp/389864684X[Clojure] +
 by Stefan Kamphausen, Tim Oliver Kaiser +
 Sep 20, 2010
 
-| image::https://images-na.ssl-images-amazon.com/images/I/51dWGdAPwUL._SL160.jpg[Practical Clojure, link="http://a.co/fWbYqs5",width="130"]
-| http://a.co/fWbYqs5[Practical Clojure] +
+| image::https://images-na.ssl-images-amazon.com/images/I/51dWGdAPwUL._SL160.jpg[Practical Clojure, link="https://a.co/fWbYqs5",width="130"]
+| https://a.co/fWbYqs5[Practical Clojure] +
 by Luke VanderHart, Stuart Sierra +
 Jun 1, 2010
 
