Add Link to "Clojure Weekly" Newsletter
Closes #457

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -51,6 +51,7 @@ Newsletters
 * http://therepl.net[The REPL]
 * http://insideclojure.org[Inside Clojure] - weekly journals about development of Clojure
 * https://purelyfunctional.tv/newsletter[PurelyFunctional.tv Newsletter]
+* https://us19.campaign-archive.com/home/?u=f5dea183eae58baf7428a4425&id=ef5512dc35[Clojure Weekly] - curated links from various sources about all things Clojure and ClojureScript
 
 Videos and presentations:
 
