--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -5,8 +5,8 @@ Rich Hickey
 :toc: macro
 :icons: font
 :navlinktext: State
-:prevpagehref: rationale
-:prevpagetitle: Rationale
+:prevpagehref: history
+:prevpagetitle: History
 :nextpagehref: spec
 :nextpagetitle: spec
 
