--- a/content/community/contributing_site.adoc
+++ b/content/community/contributing_site.adoc
@@ -79,7 +79,7 @@ When working on bigger changes it's useful to build the site locally. The site i
 
 To https://jbake.org/docs/2.6.3/#installation[install] JBake 2.6.3:
 
-. `curl -O https://dl.bintray.com/jbake/binary/jbake-2.6.3-bin.zip` (or download this file with your browser)
+. `curl -L -O https://dl.bintray.com/jbake/binary/jbake-2.6.3-bin.zip` (or download this file with your browser)
 . `unzip -o jbake-2.6.3-bin.zip`
 . Add jbake-2.6.3-bin/bin to your system PATH
 
