Community resources - practicalli
Two resource entries, one for community and one for video & presentations
sections.

--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -36,6 +36,7 @@ Community:
 * http://www.braveclojure.com/[Clojure for the Brave and True] - a beginner book by Daniel Higginbotham
 * http://aphyr.com/posts/301-clojure-from-the-ground-up-welcome[Clojure from the ground up] - a series of intro articles by Kyle Kingsbury
 * https://kimh.github.io/clojure-by-example[Clojure By Example]
+* https://practicalli.github.io/[Practicalli] - books and video tutorials on developing with Clojure, it's tooling and workflow
 * https://github.com/ClojureBridge/curriculum[ClojureBridge Curriculum]
 * https://clojuredocs.org[ClojureDocs] - community provided example repository
 * http://clojure-doc.org/[Clojure Documentation] - community-driven documentation site
@@ -59,6 +60,7 @@ Videos and presentations:
 * http://www.infoq.com/Clojure/presentations/[InfoQ Clojure Presentations] - from a variety of conferences
 * https://github.com/matthiasn/talk-transcripts[Talk transcripts] - Rich Hickey, David Nolen, Stuart Sierra, and others
 * http://www.parens-of-the-dead.com/[Parens of the Dead] - a screencast series writing a game from scratch with Clojure and ClojureScript
+* https://www.youtube.com/c/+practicalli[Practicalli Clojure Study Guide] - weekly live broadcasts on developing with Clojure and ClojureScript
 
 Podcasts:
 
